external-crates/move/crates/move-compiler/tests/move_check/typing/native_structs_pack_unpack.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04001]: restricted visibility
  ┌─ tests/move_check/typing/native_structs_pack_unpack.move:9:9
  │
3 │     native struct T;
  │                   - Struct defined in module '0x42::C'
  ·
9 │         C::T {}
  │         ^^^^^^^ Struct '0x42::C::T' can only be instantiated within its defining module '0x42::C'

error[E04015]: invalid use of native item
  ┌─ tests/move_check/typing/native_structs_pack_unpack.move:9:9
  │
3 │     native struct T;
  │     ------ Struct declared 'native' here
  ·
9 │         C::T {}
  │         ^^^^^^^ Invalid argument usage for native struct '0x42::C::T'. Native structs cannot be directly constructed/deconstructed, and their fields cannot be dirctly accessed

error[E04001]: restricted visibility
   ┌─ tests/move_check/typing/native_structs_pack_unpack.move:12:13
   │
 3 │     native struct T;
   │                   - Struct defined in module '0x42::C'
   ·
12 │         let C::T {} = c;
   │             ^^^^^^^ Struct '0x42::C::T' can only be used in deconstruction binding within its defining module '0x42::C'

error[E04015]: invalid use of native item
   ┌─ tests/move_check/typing/native_structs_pack_unpack.move:12:13
   │
 3 │     native struct T;
   │     ------ Struct declared 'native' here
   ·
12 │         let C::T {} = c;
   │             ^^^^^^^ Invalid binding usage for native struct '0x42::C::T'. Native structs cannot be directly constructed/deconstructed, and their fields cannot be dirctly accessed

error[E04001]: restricted visibility
   ┌─ tests/move_check/typing/native_structs_pack_unpack.move:15:18
   │
15 │         let _f = c.f;
   │                  ^^^ Invalid access of field 'f' on the struct '0x42::C::T'. The field 'f' can only be accessed within the module '0x42::C' since it defines 'T'

error[E03010]: unbound field
   ┌─ tests/move_check/typing/native_structs_pack_unpack.move:15:18
   │
 3 │     native struct T;
   │     ------ Struct declared 'native' here
   ·
15 │         let _f = c.f;
   │                  ^^^ Unbound field 'f' for native struct '0x42::C::T'
